tests/errors/type_check_pattern_match.ceos
type foo { X(int) }
type bar { Y(int) }

fn _(x: foo) -> void {
  let Y(y) = x {
    print(y)
  }
}(X(42))
